# popart

./: .arcconfig  .arclint  .buildignore  .clang-format  .gitignore  .isort.cfg  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CTestCustom.ctest  DESIGNDECS.txt  MINLIVESORT.txt  README.md  RECOMPUTATION.txt  SuperProjectConfig.cmake  THE3STEPS.txt  TODO.txt  cbt.json  cspell.json  enable.sh.in  format.sh  gen_operators.py  gen_python_docs.sh  install_release.py  junk_speck.cpp  popart.prodinfo.yml  poplar_version  poponnx.prodinfo.yml  requirements.txt  version.json  willow.prodinfo.yml
build_scripts/boost/: CMakeLists.txt  FindBoost.cmake  user-config.jam.in
docs/: CMakeLists.txt  CustomOperators.md  active_buildir.sh.in  docs_on_osx.txt  gen_docs.sh.in  gen_popart_supported_ops.py  gen_popartir_supported_ops.py  gen_popxl_supported_ops.py  gen_supported_ops.py
docs/api_cpp/: Doxyfile.in  api-changes.rst  api-cpp.rst  index.rst  intro.rst  legal.rst
docs/api_python/: api-changes.rst  api-popart-ir.rst  api-python.rst  index.rst  intro.rst  legal.rst
docs/notes/: README.md  glossary.md  ir.md
docs/popart/: CMakeLists.txt  api-cpp.rst  api-python.rst  builderonnx.rst  custom_ops.rst  env_vars.rst  executing.rst  glossary.rst  importing.rst  index.rst  intro.rst  legal.rst  overlap_io.rst  performance.rst  references.rst  setup_quick_start.rst  supported_ops.rst  tensor_locations.rst  variablesettings.rst
docs/popart_ir/: api-popart-ir.rst  api.rst  builderpopartir.rst  datatype.rst  genindex.rst  index.rst  introduction.rst  popartir.rst  popartir_concepts.rst  popartir_context.rst  popartir_graph.rst  popartir_op.rst  popartir_subgraph.rst  popartir_tensor.rst  popartir_transforms.rst  simple_example.rst  tensor.rst  transforms.rst
docs/popxl/: api.rst  application_example.rst  application_example_rts.rst  concepts.rst  context.rst  custom_ops.rst  datatype.rst  distributed.rst  env_vars.rst  graph.rst  index.rst  introduction.rst  legal.rst  op.rst  remote.rst  replication.rst  session.rst  setup_quick_start.rst  simple_example.rst  tensor.rst  transforms.rst
docs/shared/: custom_ops_cppimport.rst  custom_ops_cppimport.rst.inc  custom_ops_environment.rst  custom_ops_environment.rst.inc  custom_ops_grad_op_class.rst  custom_ops_grad_op_class.rst.inc  custom_ops_grad_opx_class.rst  custom_ops_grad_opx_class.rst.inc  custom_ops_op_class.rst  custom_ops_op_class.rst.inc  custom_ops_opx_class.rst  custom_ops_opx_class.rst.inc  custom_ops_param_struct.rst  custom_ops_param_struct.rst.inc  env_vars_logging.rst  env_vars_logging.rst.inc
docs/user_guide/: Doxyfile.in  alldocumentation.rst  api.rst  batch_size.rst  builder.rst  builderonnx.rst  builderpopartir.rst  custom_ops.rst  distributed_training.rst  env_vars.rst  examples.rst  executing.rst  glossary.rst  importing.rst  index.rst  intro.rst  legal.rst  numerical_issues.rst  overlap_io.rst  performance.rst  popartir.rst  popartir_concepts.rst  popartir_datatype.rst  popartir_op.rst  popartir_subgraph.rst  popartir_tensor.rst  popartir_transforms.rst  refereces.rst  references.rst  supported_ops.rst  tensor_locations.rst  training_ops.rst  variablesettings.rst
driver/: CMakeLists.txt  driver.cpp  driver.py  losses.py  pydriver.cpp  pydriver.py  torchdriver.py
examples/: CMakeLists.txt  run_example.sh
examples/cplusplus/: custom_op.cpp  custom_op_no_onnx.cpp  dot_graph.cpp  dot_inference_graph.cpp  simple_addition.cpp  supported_ops.cpp
examples/custom_ops/: .gitignore  CMakeLists.txt  custom_op.cpp  custom_op.py
examples/custom_patterns/: Makefile  custom_pattern.cpp  custom_pattern.py
examples/distributed_training/: simple_distributed_training.py
examples/python/: model_zoo_import.py  model_zoo_neural_style.py  model_zoo_train_resnet.py  simple_addition.py  simple_convolution_maxpool.py  weights.py
examples/pytorch/: cifar10.py  resnet_example.py  resnet_main.py  torchvision_models.py
neuralnet/: CMakeLists.txt
neuralnet/include/: pbwrap.hpp
neuralnet/src/: add.cpp  attibutes.cpp  averagepool.cpp  conv.cpp  convolution.cpp  error.cpp  filereader.cpp  graph.cpp  intervals.cpp  l1.cpp  logsoftmax.cpp  loss.cpp  neuralnet.cpp  nll.cpp  pad.cpp  patterns.cpp  pbwrap.cpp  receptive.cpp  relu.cpp  squeeze.cpp  sum.cpp  tensor.cpp  tensorinfo.cpp  varupdate.cpp  vertex.cpp
pyneuralnet/: CMakeLists.txt  pyneuralnet.cpp  torchwriter.py  writer.py
python/: CMakeLists.txt  __init__.py.in  common.hpp  np_utils.cpp  popart.cpp  popart.cpp.gen  popart_opset10.gen.cpp  popart_opset11.gen.cpp  popart_opset6.gen.cpp  popart_opset7.gen.cpp  popart_opset8.gen.cpp  popart_opset9.gen.cpp  poponnx.cpp  poponnx.cpp.gen  pyarray_accessor.hpp
python/popart/: CMakeLists.txt  __init__.py.in  builder.py  options.py  session.py  tensorinfo.py  writer.py
python/popart._internal.ir/: CMakeLists.txt  __init__.py.in  popart._internal.ir.cpp
python/popart.ir/: CMakeLists.txt  __init__.py.in
python/poponnx/: __init__.py  builder.py  dataloader.py  options.py  session.py  tensorinfo.py  writer.py
python/popxl/: CMakeLists.txt  __init__.py.in
pywillow/: CMakeLists.txt  datafeeds.py  optimizers.py  pywillow.cpp  torchwriter.py  writer.py
tests/: AddPythonUnitTest.cmake  CMakeLists.txt  README.md  conftest.py
tests/aapi/: CMakeLists.txt  basic_graph.cpp  basic_inference.cpp  basic_training_loop.cpp  loop_accumulate.cpp
tests/basic/: basic.py  example.py  junk.py  loader_test.py  model0.py  model1.py  model2.py  model4.py
tests/cifar10/: README.md  c10driver.py  model0.py  model1.py  model2.py  model5.py
tests/integration/: CMakeLists.txt  README.md  abort_test.py  accumulateouterfragmentparallelizer_test.cpp  addbias.py  aliaszerocopy_model_test.py  aliaszerocopy_test.cpp  aliaszerocopy_test1.cpp  all_constexpr.py  allocator_test.cpp  anchorreturntype_test.py  annotations_test.py  auto_loss_scaling_gradient_accumulation_test.py  auto_loss_scaling_graph_replication_test.py  auto_loss_scaling_identical_weight_updates_0.py  auto_virtual_graph_test.py  (+135 more)
willow/: CMakeLists.txt  popart-config.cmake.in
(+4354 files in other folders)
